# bettingkingarna

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: django.yml
accounts/: admin.py  models.py
accounts/migrations/: 0001_initial.py
betting/: admin.py  context_processors.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
betting/migrations/: 0001_initial.py  0002_alter_bet_user_standingprediction.py  0002_alter_bet_user_standingprediction_and_more.py  0002_alter_game_away_goals_alter_game_home_goals.py  0002_remove_team_short.py  0003_bet_points_alter_bet_away_goals_alter_bet_home_goals_and_more.py  0004_alter_game_away_goals_alter_game_home_goals.py  0005_alter_bet_updated.py  0005_auto_20230119_0043.py  0006_alter_bet_game_bet_one_bet_per_user_per_game.py  0006_standingpredictionteam_and_more.py  0007_alter_game_options_and_more.py  0007_bet_created_bet_updated.py  0008_competition_excluded.py  0009_team_logo.py  0010_standing_clean_sheets_standing_most_points_and_more.py
betting/static/betting/: style.css
betting/templates/betting/: base.html  base_form.html  bet_form.html  competition_overview.html  create_standing_prediction.html  delete.html  detail.html  game_detail.html  game_list.html  index.html  login.html  standing_prediction.html  standing_prediction_list.html  standing_prediction_suggestion.html  (+6 more)
betting/templatetags/: betting_extras.py
mysite/: settings.py  urls.py
mysite/accounts/: forms.py
mysite/betting/: admin.py  models.py  urls.py  views.py
mysite/mysite/: settings.py
utils/: charts.py
(+9 files in other folders)
