[tool.poetry]
name = "bettingkingarna"
version = "1.0.0"
description = ""
authors = ["Jonas Petersson <jonas.eric.peterson@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pylint-django = "^2.5.5"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
