[tool.poetry]
name = "bettingkingarna"
version = "1.2.0"
description = ""
authors = ["Jonas Petersson <jonas.eric.peterson@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.2.1"
python-decouple = "^3.8"
django-ical = "^1.9.2"

[tool.poetry.group.dev.dependencies]
django-debug-toolbar = "^4.3.0"
pylint-django = "^2.5.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
